# chatApp

./: frist_project - Shortcut.lnk  pubspec.yaml
android/: CMakeLists.txt  settings.gradle
android/app/: build.gradle  google-services.json
android/gradle/wrapper/: gradle-wrapper.properties
ios/: firebase_app_id_file.json
ios/Runner/: GoogleService-Info.plist
lib/: constant.dart  firebase_options.dart  main.dart
lib/model/: message.dart
lib/pages/: chat_page.dart  login_page.dart  register_page.dart
lib/widgets/: chat_bubble.dart  custom_button.dart  custom_text_field.dart
macos/: firebase_app_id_file.json
macos/Runner/: GoogleService-Info.plist
test/: widget_test.dart
